[package]
name = "aoc_runner"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
color-eyre = "0.5.8"
dirs-next = "2.0.0"
promptly = "0.3.0"
reqwest = "0.10.9"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.21"
tokio = { version = "0.2", features = ["macros", "rt-core", "process"] }
